test/errors/include-depth/include-depth.rom
Error in `include-depth.asm` on line 1: Too many nested includes
